# libzfs

./: .gitignore  CLAUDE.md  LICENSE  README.md  cleanup_test_pool.sh  pyproject.toml  pytest.ini  run_tests.sh  setup_test_pool.sh  test_fixture.py  test_pool.sh
.claude/agents/: README.md  libzfseasy-developer.md  libzfseasy-expert.md  libzfseasy-implementation-planner.md  pytest-test-author.md  real-zfs-scenario-dev.md  zfs-code-reviewer.md  zfs-implementation-planner.md  zfsbackup-daemon-dev.md  zfsbackup-developer.md  zfsbackup-implementation-planner.md
docs/: config_db_cli_plan.md  production_readiness_report.md  two_vm_backup_report.md
libzfs/: __init__.py  types.py  zfs.py
libzfseasy/: __init__.py  types.py  zfs.py
scenarios/: README.md  cleanup_test_pool.sh  create_test_pool.sh  setup_test_pool.sh  test_two_vm_backup.sh
tests/: .gitignore  README.md  conftest.py  test_commands.py  test_commands_part2.py  test_integration.py  test_real_zfs.py  test_types.py  test_zfsbackup_api.py  test_zfsbackup_basic.py  test_zfsbackup_config.py  test_zfsbackup_daemon.py  test_zfsbackup_duration.py  test_zfsbackup_manager.py  test_zfsbackup_real.py  test_zfsbackup_remote.py  test_zfsbackup_snapshot_info.py  test_zfsbackup_store.py  test_zfsbackup_workers.py
zfsbackup/: README.md  __init__.py  api.py  backup_manager.py  config.example.yaml  config.py  config.test.yaml  create_test_pool.sh  daemon.py  remote.py  snapshot_manager.py  test_basic.py  workers.py
zfsbackup/store/: __init__.py  models.py
